Website/V1.0/css/style.css
/* ... */
    .jam:hover img {
        -webkit-transform: scale(1.15,1.15);
        -moz-transform: scale(1.15,1.15);
        -o-transform: scale(1.15,1.15);
        transform: scale(1.15,1.15);
    }
    .jam a.info {
        filter: alpha(opacity=0);
        opacity: 0;
        -webkit-transition: all 0.2s ease-in-out;
        -moz-transition: all 0.2s ease-in-out;
        -o-transition: all 0.2s ease-in-out;
        transition: all 0.2s ease-in-out;
        display: inline-block;
        text-decoration: none;
        padding: 7px 14px;
        background: rgba(145, 213, 242, 0.8);
        color: #fff;
        position: relative;
        margin:20px;
    }
    .jam:hover .mask {
        filter: alpha(opacity=100);
        opacity: 1;
    }
    .jam:hover h3,
    .jam:hover p,
    .jam:hover a.info {
        filter: alpha(opacity=100);
        opacity: 1;
        -webkit-transform: translateY(0px);
        -moz-transform: translateY(0px);
        -o-transform: translateY(0px);
        transform: translateY(0px);
    }
    .jam:hover p {
        -webkit-transition-delay: 0.2s;
        -moz-transition-delay: 0.2s;
        -o-transition-delay: 0.2s;
        transition-delay: 0.2s;
    }
    .jam:hover a.info {
        -webkit-transition-delay: 0.1s;
        -moz-transition-delay: 0.1s;
        -o-transition-delay: 0.1s;
        transition-delay: 0.1s;
        -webkit-box-shadow: 0 0 5px rgba(145, 213, 242, .8);
        -moz-box-shadow: 0 0 5px rgba(145, 213, 242, .8);
        box-shadow: 0 0 5px rgba(145, 213, 242, .8);
    }

/*
    based on what I learned from the above
*/

.profiles {
    display: grid;
    grid-auto-columns: 1fr;
    column-gap: 15px;
    text-align:center;
}
.profile {
    line-height: 25px;
    position: relative;
    overflow: hidden;
    border-top: 10px solid rgba(16, 35, 63,.9);
    border-bottom: 10px solid rgba(16, 35, 63,.9);
    -webkit-box-shadow: 0 0 15px rgba(16, 35, 63,.9);
    -moz-box-shadow: 0 0 15px rgba(16, 35, 63,.9);
    box-shadow: 0 0 15px rgba(16, 35, 63,.9);
}
@media(min-width:900px){

    .profile {
        display: grid;
        grid-row: 1;
    }
}
    .profile .prof, .profile .content{
        position:absolute;
        overflow:hidden;
    }
    .profile h1 {
        text-align: center;
        display: block;
        position: relative;
        margin-top: 90px;
        margin-bottom: 90px;
        -webkit-transition: all 0.2s linear;
        -moz-transition: all 0.2s linear;
        -o-transition: all 0.2s linear;
        transition: all 0.2s linear;
        font-family: 'Cousine';
        font-size:40px;
    }
    .profile p {
        text-align:center;
        -webkit-transform: translateX(-100px);
        -moz-transform: translateX(-100px);
        -o-transform: translateX(-100px);
        transform: translateX(-100px);
        filter: alpha(opacity=0);
        opacity: 0;
        -webkit-transition: all 0.2s ease-in-out;
        -moz-transition: all 0.2s ease-in-out;
        -o-transition: all 0.2s ease-in-out;
        transition: all 0.2s ease-in-out;
        position: relative;
        padding: 10px 10px 10px;
        color: #fff;
        margin-top: 30px;
    }
    .profile:hover h1 {
        -webkit-filter: blur(5px);
        -moz-filter: blur(5px);
        filter: blur(5px);
    }
    .profile a.profile-Info {
        -webkit-transform: translateX(100px);
        -moz-transform: translateX(100px);
        -o-transform: translateX(100px);
        transform: translateX(100px);
        filter: alpha(opacity=0);
        opacity: 0;
        -webkit-transition: all 0.2s ease-in-out;
        -moz-transition: all 0.2s ease-in-out;
        -o-transition: all 0.2s ease-in-out;
        transition: all 0.2s ease-in-out;
        display: inline-block;
        text-decoration: none;
        padding: 7px 14px;
        background: rgba(16, 35, 63, 0.8);
        color: #fff;
        position: relative;
        margin: 20px;
    }
    .profile:hover p {
        -webkit-transition-delay: 0.2s;
        -moz-transition-delay: 0.2s;
        -o-transition-delay: 0.2s;
        transition-delay: 0.2s;
        filter: alpha(opacity=100);
        opacity: 1;
        -webkit-transform: translateX(0px);
        -moz-transform: translateX(0px);
        -o-transform: translateX(0px);
        transform: translateX(0px);
    }
        .profile:hover a.profile-Info {
            -webkit-transition-delay: 0.1s;
            -moz-transition-delay: 0.1s;
            -o-transition-delay: 0.1s;
            transition-delay: 0.1s;
            -webkit-box-shadow: 0 0 5px rgba(16, 35, 63, .8);
            -moz-box-shadow: 0 0 5px rgba(16, 35, 63, .8);
            box-shadow: 0 0 5px rgba(16, 35, 63, .8);
            filter: alpha(opacity=100);
            opacity: 1;
            -webkit-transform: translateX(0px);
            -moz-transform: translateX(0px);
            -o-transform: translateX(0px);
            transform: translateX(0px);
        }
/* ... */

